# basic-discord-bot

./: README.md  docker-compose.yaml  dockerfile  main.py  makefile  pyproject.toml
