[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["shdennlin <shawndennislin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.8, <=3.10"
discord = "^2.0.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
